intermediate merge for jboss conversion